Fix Dockerfile Go 1.25 + unignore sdk/package-lock.json for CI

--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ composer.lock
 
 # Lock files for dependencies (keep Cargo.lock for binaries, ignore others)
 **/package-lock.json
+!sdk/package-lock.json
 
 # ML model caches
 **/.fastembed_cache/
